@@ -2,6 +2,7 @@
 
 . /lib/partman/definitions.sh
 . /lib/partman/recipes.sh
+. /lib/partman/auto-shared.sh
 
 dev=$1
 
@@ -14,69 +15,7 @@ if [ -z "$2" ]; then
 
 	choose_recipe "$free_size" || exit $?
 
-	cd $dev
-
-	open_dialog LABEL_TYPES
-	types=$(read_list)
-	close_dialog
-
-	label_type=$(default_disk_label)
-
-	if ! expr "$types" : ".*${label_type}.*" >/dev/null; then
-		label_type=msdos # most widely used
-	fi
-	
-	# Use gpt instead of msdos disklabel for disks larger than 2TB
-	if expr "$types" : ".*gpt.*" >/dev/null; then
-		if [ "$label_type" = msdos ] ; then
-			disksize=$(cat size)
-			if $(longint_le $(human2longint 2TB) $disksize) ; then
-				label_type=gpt
-			fi
-		fi
-	fi
-
-	if [ "$label_type" = sun ]; then
-		db_input critical partman/confirm_write_new_label
-		db_go || exit 0
-		db_get partman/confirm_write_new_label
-		if [ "$RET" = false ]; then
-			db_reset partman/confirm_write_new_label
-			exit 1
-		fi
-		db_reset partman/confirm_write_new_label
-	fi
-	
-	open_dialog NEW_LABEL "$label_type"
-	close_dialog
-	
-	if [ "$label_type" = sun ]; then
-		# write the partition table to the disk
-		disable_swap
-		open_dialog COMMIT
-		close_dialog
-		sync
-		# reread it from there
-		open_dialog UNDO
-		close_dialog
-		enable_swap
-	fi
-
-	# Different types partition tables support different visuals.  Some
-	# have partition names other don't have, some have extended and
-	# logical partitions, others don't.  Hence we have to regenerate the
-	# list of the visuals
-	rm -f visuals
-
-	free_space=''
-	open_dialog PARTITIONS
-	while { read_line num id size type fs path name; [ "$id" ]; }; do
-		if [ "$fs" = free ]; then
-			free_space=$id
-			free_size=$size
-		fi
-	done
-	close_dialog
+	wipe_disk || exit $?
 else
 	# Two parameters, being run on selected free space.
 	free_space=$2
